[package]
name = "uniarts-common"
version = "3.0.0"
authors = ["terry.tu <tuminfei1981@gmail.com>"]
edition = "2018"
homepage = 'https://uniarts.network'
license = 'Unlicense'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
pallet-balances = { version = "3.0.0", default-features = false }
pallet-authorship = { version = "3.0.0", default-features = false }
pallet-transaction-payment = { version = "3.0.0", default-features = false }

uniarts-primitives = { version = "3.0.0", path = "../../primitives", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-authorship/std',
    "pallet-balances/std",
    'pallet-transaction-payment/std',
    'uniarts-primitives/std',
]
