[package]
authors = ["UniArts Developers"]
description = 'FRAME pallet nft'
edition = '2018'
homepage = 'https://uniarts.network'
license = 'Unlicense'
name = 'pallet-faucets'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }

pallet-balances = { version = "3.0.0", default-features = false }
pallet-timestamp = { version = "3.0.0", default-features = false }

uniarts-primitives = { version = "3.0.0", path = "../../primitives", default-features = false }
pallet-nft-multi = { path = "../nft-multi", default-features = false }

[dev-dependencies]
serde = { version = '1.0.119' }
sp-io = { version = "3.0.0", default-features = false}
sp-core = { version = "3.0.0", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'scale-info/std',
    'sp-runtime/std',
    'sp-std/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std',
    'pallet-timestamp/std',
]
