[package]
name = "pallet-forum"
authors = ["terry.tu <tuminfei1981@gmail.com>"]
edition = "2018"
version = '3.0.0'
homepage = 'https://uniarts.network'
license = 'Unlicense'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false}
sp-core = { version = "3.0.0", default-features = false }
# third-party dependencies
serde = { version = "1.0.102", features = ["derive"] }

pallet-timestamp = { version = "3.0.0", default-features = false}

[dev-dependencies]
sp-core = { version = "3.0.0"}

[features]
default = ['std']
std = [
    "codec/std",
    "serde/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "pallet-timestamp/std",
]
