[package]
authors = ["UniArts Developers"]
description = 'FRAME pallet nft'
edition = '2018'
homepage = 'https://uniarts.network'
license = 'Unlicense'
name = 'pallet-nft'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false}
sp-core = { version = "3.0.0", default-features = false }
transaction-payment = { version = "3.0.0", package = 'pallet-transaction-payment', default-features = false}
pallet-names = { version = "3.0.0", path = "../names", default-features = false}

# third-party dependencies
serde = { version = "1.0.101", optional = true }
sha3 = { version = "0.9.1", default-features = false }
support = {version = "3.0.0", package = "module-support",  path = "../../support", default-features = false }

uniarts-primitives = { version = "3.0.0", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = { version = "3.0.0"}


[features]
default = ['std']
std = [
    "serde",
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
    "sp-io/std",
    "sp-core/std",
    "pallet-names/std",
    "transaction-payment/std",
    "sha3/std",
    "uniarts-primitives/std",
    "support/std",
]
