[package]
name = "pallet-rewards"
version = "3.0.0"
authors = ["yxf <yxf4559@gmail.com>"]
edition = "2018"
homepage = 'https://uniarts.network'
license = 'Unlicense'


[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
pallet-aura = { version = "3.0.0", default-features = false }
pallet-session = { version = "3.0.0", default-features = false }
sp-consensus-aura = { version = "0.9.0", default-features = false }
frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
]
runtime-benchmarks = ["frame-benchmarking"]