[package]
name = "pallet-staking-rpc"
version = "3.0.0"
authors = ["yxf <yxf4559@gmail.com>"]
edition = "2018"
homepage = 'https://uniarts.network'
license = 'Unlicense'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "15.0.0"
jsonrpc-derive = "15.0.0"

sp-core = { version = "3.0.0" }
sp-rpc = { version = "3.0.0" }
sp-runtime = { version = "3.0.0" }
sp-api = { version = "3.0.0" }
sp-blockchain = { version = "3.0.0" }

serde = { version = "1.0.102", features = ["derive"] }
pallet-staking-rpc-runtime-api = { version = "3.0.0", path = "./runtime-api" }